[tool.poetry]
name = "avicennia germinans"
version = "0.1.0"
description = "This project is a visualization of the Avicennia germinans mangrove species as a test for pixel-based analysis"
authors = ["Lisah Ligono"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^2.1.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
pyplot-cli = "^0.1.1"
rasterio = "^1.3.10"
path-manager = "^0.102"
DateTime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
